# agmod

./: .gitignore  AGENTS.md  README.md  agmod.spec  color_demo_tui_app.py  main.py  pyproject.toml
docs/: handoff_260311_2.md  handoff_260320_1_agmod_metadata_viewer.md  progress_tracker.csv  sessions_log.md
llm/: crawl4ai_toolbox.md  progress_tracker.md  sessions_logger.md  textual_resources.md  textual_toolbox.md
llm/others/: gotchas.md
scripts/: build_release.sh  install.sh
src/agmod/: __init__.py  __main__.py  agents_editor.py  block_model.py  config.py  copy_engine.py  metadata_renderer.py  scanner.py
src/agmod/tui/: __init__.py  app.py  panels.py  themes.py
tests/: test_agents_editor.py  test_color_demo.py  test_copy_engine.py  test_everforest_themes.py  test_metadata_renderer.py  test_scanner.py  test_tui_layout.py  test_tui_smoke.py
