[project]
name = "agmod"
version = "0.1.3"
description = "Local LLM block manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
agmod = "agmod.tui.app:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
build = [
    "pyinstaller>=6.6",
]
